Update: Make css more compact

--- a/src/css/alta.css
+++ b/src/css/alta.css
@@ -1,14 +1,13 @@
 fieldset {
     border-radius: 10px;
     padding: 1rem;
-}
 
-fieldset:not(.other) {
-    margin: 2rem 0;
-}
-
-fieldset.other, fieldset.message {
-    margin-bottom: 10px;
+    &:not(.other) {
+        margin: 2rem 0;
+    }
+    &.other, &.message {
+        margin-bottom: 10px;
+    }
 }
 
 label {
@@ -23,18 +22,62 @@ textarea {
     outline: none;
 }
 
-input[type=submit] {
-    width: 100%;
-    background: var(--mainbtn-secondary-gradiant);
-    color: black;
-    padding: 14px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 1000px;
-    cursor: pointer;
+input {
+    &[type=submit] {
+        width: 100%;
+        background: var(--mainbtn-secondary-gradiant);
+        color: black;
+        padding: 14px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 1000px;
+        cursor: pointer;
+    }
+    &:required {
+        &:not([type=checkbox], [type="radio"]) {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            box-sizing: border-box;
+            border: none;
+            border-bottom: 1px solid #0077ff;
+            outline: none;
+            font-size: medium;
+            background-color: #000;
+            color: #fff;
+        }
+        &:not(:placeholder-shown, [type=date], [type="radio"]):invalid {
+            border-bottom: 1px solid red;
+        }
+        &:not([type="radio"]):valid {
+            border-bottom: 1px solid green;
+        }
+    }
+    &[type=date]::-webkit-calendar-picker-indicator {
+        filter: invert(100%) brightness(100%) contrast(100%);
+    }
+    &[type="radio"] {
+        appearance: none;
+        border-radius: 50%;
+        width: 16px;
+        height: 16px;
+        border: 2px solid #999999;
+        transition: 0.2s all linear;
+        margin-right: 5px;
+        position: relative;
+        top: 4px;
+
+        &:checked {
+            border: 6px solid white;
+        }
+    }
+    &[type=checkbox] {
+        width: 14px;
+        height: 14px;
+    }
 }
 
-input:required:not([type=checkbox], [type="radio"]), select {
+select {
     width: 100%;
     padding: 12px;
     margin: 10px 0;
@@ -45,42 +88,6 @@ input:required:not([type=checkbox], [type="radio"]), select {
     font-size: medium;
     background-color: #000;
     color: #fff;
-}
-
-input[type=date]::-webkit-calendar-picker-indicator {
-    filter: invert(100%) brightness(100%) contrast(100%);
-}
-
-input[type="radio"] {
-  appearance: none;
-
-  border-radius: 50%;
-  width: 16px;
-  height: 16px;
-
-  border: 2px solid #999999;
-  transition: 0.2s all linear;
-  margin-right: 5px;
-
-  position: relative;
-  top: 4px;
-}
-
-input[type="radio"]:checked {
-  border: 6px solid white;
-}
-
-input[type=checkbox] {
-    width: 14px;
-    height: 14px;
-}
-
-input:required:not(:placeholder-shown, [type=date], [type="radio"]):invalid {
-    border-bottom: 1px solid red;
-}
-
-input:required:not([type="radio"]):valid {
-    border-bottom: 1px solid green;
 }
 
 hr {
@@ -96,49 +103,48 @@ hr {
     max-width: 600px;
     width: 100%;
     padding: 20px;
-}
 
-.signup header, .contact header {
-    margin: 20px 0;
-}
-
-.signup form fieldset input:first-of-type, .contact form fieldset input:first-of-type {
-    margin-top: 0;
+    header {
+        margin: 20px 0;
+    }
+    form {
+        fieldset input:first-of-type {
+            margin-top: 0;
+        }
+    }
+    textarea {
+        width: 99%;
+        min-height: fit-content;
+        max-height: 30rem;
+        resize: none;
+        overflow-y: scroll;
+        background-color: black;
+        color: white;
+        font-size: larger;
+    }
 }
 
 .signup form .other div {
     display: grid;
 }
 
-.signup form .other textarea, .contact form textarea {
-    width: 99%;
-    min-height: fit-content;
-    max-height: 30rem;
-    resize: none;
-    overflow-y: scroll;
-    background-color: black;
-    color: white;
-    font-size: larger;
-}
-
-.signup .gender {
+.gender {
     display: inline-flex;
     align-items: baseline;
     width: 100%;
-}
 
-.gender > div {
-    display: inline-flex;
-    width: 100%;
-}
+    &>div {
+        display: inline-flex;
+        width: 100%;
 
-.gender > div > div {
-    display: inline-flex;
-    margin: 0 auto;
-}
-
-.gender label {
-    min-width: unset;
+        &>div {
+            display: inline-flex;
+            margin: 0 auto;
+        }
+    }
+    label {
+        min-width: unset;
+    }
 }
 
 .terms {
