--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,13 +6,6 @@
     background-position: bottom;
 }
 
-.releases header, .artist header, .festivals header, .top10 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 1rem;
-}
-
 .releases header a, .artist header a, .festivals header p, .top10 header a {
     padding: 10px;
     border-radius: 1000px;
@@ -20,11 +13,17 @@
 
 .releases, .artist, .festivals, .top10 {
     width: 100%;
-}
 
-.releases > div, .artist > div, .festivals > div, .top10 > div {
-    width: 80%;
-    margin: 10px auto;
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 1rem;
+    }
+    & > div {
+        width: 80%;
+        margin: 10px auto;
+    }
 }
 
 .releases article, .releases header a, .artist article, .artist header a, .top10 header a {
@@ -42,21 +41,20 @@
     align-items: center;
     width: 80vw;
     padding: 70px 0 80px 0;
-}
 
-.homepage img {
-    width: 40%;
-    margin-left: 5rem;
-}
+    img {
+        width: 40%;
+        margin-left: 5rem;
+    }
+    h2 {
+        font-size: 2em;
 
-.homepage h2 {
-    font-size: 2em;
-}
-
-.homepage h2 span {
-    background: linear-gradient(90deg, rgba(255, 43, 166, 1) 0%, rgba(32, 227, 255, 1) 50%, rgba(182, 255, 59, 1) 100%);
-    color: transparent;
-    background-clip: text;
+        span {
+            background: linear-gradient(90deg, rgba(255, 43, 166, 1) 0%, rgba(32, 227, 255, 1) 50%, rgba(182, 255, 59, 1) 100%);
+            color: transparent;
+            background-clip: text;
+        }
+    }
 }
 
 /* Button border gradient animation */
@@ -71,15 +69,25 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-}
 
-.mainBtn::after {
-    content: '';
-    position: absolute;
-    height: 107%;
-    width: 102%;
-    border-radius: 1000px;
-    z-index: -1;
+    &::after {
+        content: '';
+        position: absolute;
+        height: 107%;
+        width: 102%;
+        border-radius: 1000px;
+        z-index: -1;
+    }
+    &:hover {
+        z-index: 0;
+
+        &:active {
+            filter: brightness(0.75);
+        }
+        &.secondary {
+            color: #000;
+        }
+    }
 }
 
 .mainBtn.primary::after {
@@ -88,18 +96,6 @@
 
 .mainBtn.secondary::after {
     background: var(--mainbtn-secondary-gradiant);
-}
-
-.mainBtn:hover {
-    z-index: 0;
-}
-
-.mainBtn:hover:active {
-    filter: brightness(0.75);
-}
-
-.mainBtn.secondary:hover {
-    color: #000;
 }
 
 .homeTags p {
@@ -113,107 +109,113 @@
 /* releases */
 .releases {
     background: linear-gradient(180deg, hsl(190, 57%, 28%) 0%, #000 100%);
-}
 
-.releases header a {
-    border: 2px solid hsl(190, 57%, 48%);
-    background: linear-gradient(to right, hsl(190, 57%, 48%), hsl(190, 57%, 28%));
-    margin-top: 5px;
-}
+    header a {
+        border: 2px solid hsl(190, 57%, 48%);
+        background: linear-gradient(to right, hsl(190, 57%, 48%), hsl(190, 57%, 28%));
+        margin-top: 5px;
+    }
+    &>div>div {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    article {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        border-radius: 1rem;
+        width: 15em;
+        margin: 10px;
+        background-color: #000;
 
-.releases > div > div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
+        h3 {
+            padding: 0;
+            margin: 0;
+        }
+        &> div {
+            padding: 16px;
 
-.releases article {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 1rem;
-    width: 15em;
-    margin: 10px;
-    background-color: #000;
-}
-
-.releases img {
-    border-radius: 1rem 1rem 0 0;
-}
-
-.releases article h3 {
-    padding: 0;
-    margin: 0;
-}
-
-.releases article > div {
-    padding: 16px;
-}
-
-.releases article > div a {
-    padding: 10px;
-    border: 1px solid grey;
-    border-radius: 1000px;
-    margin-top: 5px;
-    display: inline-block;
+            a {
+                padding: 10px;
+                border: 1px solid grey;
+                border-radius: 1000px;
+                margin-top: 5px;
+                display: inline-block;
+            }
+        }
+    }
+    img {
+        border-radius: 1rem 1rem 0 0;
+    }
 }
 
 /* Artist */
 .artist {
     background: linear-gradient(180deg, #6D1A4A 0%, #000000 100%);
-}
 
-.artist header a {
-    border: 2px solid hsl(325, 61%, 46%);
-    background: linear-gradient(to right, hsl(325, 61%, 46%), #6D1A4A);
-    margin-top: 5px;
-}
-.artist article {
-    margin: 10px;
-}
+    header a {
+        border: 2px solid hsl(325, 61%, 46%);
+        background: linear-gradient(to right, hsl(325, 61%, 46%), #6D1A4A);
+        margin-top: 5px;
+    }
+    article {
+        margin: 10px;
 
-.artist > div > div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.artist article a {
-    display: inline-flex;
-    align-items: center;
-    border-radius: 10px;
-    background-color: #000;
-    width: 20rem;
-}
-
-.artist article img {
-    border-radius: 10px;
-    width: 5rem;
-    height: 5rem;
-    margin: 10px;
-}
-
-.artist article div {
-    margin: 0 10px;
+        a {
+            display: inline-flex;
+            align-items: center;
+            border-radius: 10px;
+            background-color: #000;
+            width: 20rem;
+        }
+        img {
+            border-radius: 10px;
+            width: 5rem;
+            height: 5rem;
+            margin: 10px;
+        }
+        div {
+            margin: 0 10px;
+        }
+    }
+    &>div>div {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 }
 
 /* Festivals */
 .festivals {
     background: linear-gradient(180deg, #2F3E1C 0%, #000 100%);
-}
 
-.festivals header p {
-    border: 2px solid hsl(84, 48%, 28%);
-    background: linear-gradient(to right, hsl(84, 48%, 28%), #2F3E1C);
-}
+    header p {
+        border: 2px solid hsl(84, 48%, 28%);
+        background: linear-gradient(to right, hsl(84, 48%, 28%), #2F3E1C);
+    }
+    &>div>div, .festivalMainSection {
+        display: flex;
+    }
+    article {
+        margin: 10px;
+        width: 100%;
+        background-color: #000;
+        border-radius: 10px;
+    }
+    aside {
+        width: 25%;
 
-.festivals > div > div, .festivalMainSection {
-    display: flex;
-}
+        img {
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+        }
+        div {
+            padding: 10px;
 
-.festivals article {
-    margin: 10px;
-    width: 100%;
-    background-color: #000;
-    border-radius: 10px;
+            a {
+                border: 1px solid gray;
+            }
+        }
+    }
 }
 
 .festivalMainSection {
@@ -221,60 +223,45 @@
     height: fit-content;
     border-radius: 10px;
     width: 75%;
-}
 
-.festivalMainSection article a {
-    width: 100%;
-    display: block;
-}
+    article {
+        a {
+            width: 100%;
+            display: block;
+        }
+        img {
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            width: inherit;
+        }
+        div {
+            margin: 10px;
 
-.festivalMainSection article img {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    width: inherit;
-}
-
-.festivalMainSection article div {
-    margin: 10px;
-}
-
-.festivalMainSection article div span {
-    background-color: #5C1F45;
-    border-radius: 1000px;
-    padding: 8px 10px;
-    display: inline-block;
-    margin: 5px 0;
-}
-.festivals aside {
-    width: 25%;
-}
-
-.festivals aside img {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.festivals aside div {
-    padding: 10px;
-}
-
-.festivals aside div a {
-    border: 1px solid gray;
+            span {
+                background-color: #5C1F45;
+                border-radius: 1000px;
+                padding: 8px 10px;
+                display: inline-block;
+                margin: 5px 0;
+            }
+        }
+    }
 }
 
 /* Top 10 */
 .top10 {
     margin-bottom: 2rem;
-}
-.top10 header a {
-    border: 2px solid grey;
-}
-.top10 ol {
-    display: grid;
-    grid-template-rows: repeat(5, auto);
-    grid-auto-flow: column;
-}
 
-.top10 ol li p {
-    margin: 10px;
+    header a {
+        border: 2px solid grey;
+    }
+    ol {
+        display: grid;
+        grid-template-rows: repeat(5, auto);
+        grid-auto-flow: column;
+
+        li p {
+            margin: 10px;
+        }
+    }
 }
