--- a/src/css/detalle.css
+++ b/src/css/detalle.css
@@ -98,8 +98,9 @@
     &>div>div {
         display: flex;
         align-items: center;
-    }
-    article {
-        margin: 0 2rem;
+
+        div {
+            margin: 0 2rem;
+        }
     }
 }
