Add: explore page and styles

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -123,7 +123,7 @@
     article {
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         border-radius: 1rem;
-        width: 15em;
+        width: 13em;
         margin: 10px;
         background-color: #000;
 
@@ -145,6 +145,8 @@
     }
     img {
         border-radius: 1rem 1rem 0 0;
+        aspect-ratio: 2;
+        object-fit: cover;
     }
 }
 
@@ -166,12 +168,19 @@
             border-radius: 10px;
             background-color: #000;
             width: 20rem;
+
+            p span {
+                color: #ffce3d;
+                font-weight: bold;
+            }
         }
         img {
             border-radius: 10px;
             width: 5rem;
             height: 5rem;
             margin: 10px;
+            aspect-ratio: 2;
+            object-fit: cover;
         }
         div {
             margin: 0 10px;
